Bug 370520 - Dolphin crash on Wayland while renaming a text file.
Summary: Dolphin crash on Wayland while renaming a text file.
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.27.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: drkonqi
: 371925 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-12 06:52 UTC by Tony
Modified: 2016-11-01 09:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.28
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2016-10-12 06:52:00 UTC
Application: dolphin (16.11.70)

Qt Version: 5.7.0
Frameworks Version: 5.28.0
Operating System: Linux 4.4.0-42-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
- What I was doing when the application crashed:
I hit F2 on text file to change its name, dolphin crashed as soon as i hit "enter".

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fd4feac38c0 (LWP 16993))]

Thread 3 (Thread 0x7fd4dc325700 (LWP 16996)):
#0  __libc_enable_asynccancel () at ../sysdeps/unix/sysv/linux/x86_64/cancellation.S:68
#1  0x00007fd4fe4b49c2 in read () at ../sysdeps/unix/syscall-template.S:84
#2  0x00007fd4f355b740 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd4f3517e84 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fd4f3518340 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fd4f35184ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007fd4f91b023b in QEventDispatcherGlib::processEvents (this=0x7fd4d40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#7  0x00007fd4f915acea in QEventLoop::exec (this=this@entry=0x7fd4dc324d00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:210
#8  0x00007fd4f8f7ffb4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:507
#9  0x00007fd4f8f84b98 in QThreadPrivate::start (arg=0x17124f0) at thread/qthread_unix.cpp:344
#10 0x00007fd4f563d6fa in start_thread (arg=0x7fd4dc325700) at pthread_create.c:333
#11 0x00007fd4fe4c4b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fd4e9c15700 (LWP 16995)):
#0  0x00007fd4f8f7c03c in QMutex::lock (this=this@entry=0x1344300) at thread/qmutex.cpp:231
#1  0x00007fd4f91af98f in QMutexLocker::QMutexLocker (m=0x1344300, this=<synthetic pointer>) at ../../include/QtCore/../../src/corelib/thread/qmutex.h:137
#2  QThreadData::canWaitLocked (this=0x13442d0) at ../../include/QtCore/5.7.0/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:253
#3  postEventSourcePrepare (s=0x7fd4e40012d0, timeout=0x7fd4e9c14b04) at kernel/qeventdispatcher_glib.cpp:259
#4  0x00007fd4f351792d in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fd4f35182cb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007fd4f35184ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007fd4f91b023b in QEventDispatcherGlib::processEvents (this=0x7fd4e40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#8  0x00007fd4f915acea in QEventLoop::exec (this=this@entry=0x7fd4e9c14cd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:210
#9  0x00007fd4f8f7ffb4 in QThread::exec (this=this@entry=0x7fd4fec1fd60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:507
#10 0x00007fd4febab7a5 in QDBusConnectionManager::run (this=0x7fd4fec1fd60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:196
#11 0x00007fd4f8f84b98 in QThreadPrivate::start (arg=0x7fd4fec1fd60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:344
#12 0x00007fd4f563d6fa in start_thread (arg=0x7fd4e9c15700) at pthread_create.c:333
#13 0x00007fd4fe4c4b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fd4feac38c0 (LWP 16993)):
[KCrash Handler]
#6  QMimeData::hasUrls (this=0x0) at kernel/qmimedata.cpp:387
#7  0x00007fd4fcd113aa in KIO::ClipboardUpdater::update (srcUrl=..., destUrl=...) at /workspace/build/src/widgets/clipboardupdater.cpp:160
#8  0x00007fd4fc543992 in KIO::SimpleJob::slotFinished (this=0x19108b0) at /workspace/build/src/core/simplejob.cpp:226
#9  0x00007fd4f9187b09 in QMetaObject::activate (sender=sender@entry=0x13a2130, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x0) at kernel/qobject.cpp:3740
#10 0x00007fd4f91884b7 in QMetaObject::activate (sender=sender@entry=0x13a2130, m=m@entry=0x7fd4fc7f0840 <KIO::SlaveInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x0) at kernel/qobject.cpp:3602
#11 0x00007fd4fc51b723 in KIO::SlaveInterface::finished (this=this@entry=0x13a2130) at /workspace/build/obj-x86_64-linux-gnu/src/core/moc_slaveinterface.cpp:424
#12 0x00007fd4fc51d6f1 in KIO::SlaveInterface::dispatch (this=0x13a2130, _cmd=<optimized out>, rawdata=...) at /workspace/build/src/core/slaveinterface.cpp:160
#13 0x00007fd4fc51bd17 in KIO::SlaveInterface::dispatch (this=0x13a2130) at /workspace/build/src/core/slaveinterface.cpp:89
#14 0x00007fd4fc520fc1 in KIO::Slave::gotInput (this=0x13a2130) at /workspace/build/src/core/slave.cpp:398
#15 0x00007fd4fc5abe85 in KIO::Slave::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /workspace/build/obj-x86_64-linux-gnu/src/core/moc_slave.cpp:87
#16 0x00007fd4f9187b09 in QMetaObject::activate (sender=0x132c2c0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3740
#17 0x00007fd4f91884b7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fd4fc7ef5a0 <KIO::Connection::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3602
#18 0x00007fd4fc4bcbe0 in KIO::Connection::readyRead (this=<optimized out>) at /workspace/build/obj-x86_64-linux-gnu/src/core/moc_connection_p.cpp:142
#19 KIO::ConnectionPrivate::dequeue (this=0x18f32c0) at /workspace/build/src/core/connection.cpp:45
#20 0x00007fd4f9188a19 in QObject::event (this=0x132c2c0, e=<optimized out>) at kernel/qobject.cpp:1263
#21 0x00007fd4f9a4889c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x132c2c0, e=0x190dcb0) at kernel/qapplication.cpp:3799
#22 0x00007fd4f9a50296 in QApplication::notify (this=0x7fff1b06b7f0, receiver=0x132c2c0, e=0x190dcb0) at kernel/qapplication.cpp:3556
#23 0x00007fd4f915ccf8 in QCoreApplication::notifyInternal2 (receiver=0x132c2c0, event=event@entry=0x190dcb0) at kernel/qcoreapplication.cpp:988
#24 0x00007fd4f915f3bb in QCoreApplication::sendEvent (event=0x190dcb0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#25 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x130dfa0) at kernel/qcoreapplication.cpp:1649
#26 0x00007fd4f915f828 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1503
#27 0x00007fd4f91afe13 in postEventSourceDispatch (s=0x1336910) at kernel/qeventdispatcher_glib.cpp:276
#28 0x00007fd4f35181a7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007fd4f3518400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007fd4f35184ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007fd4f91b021f in QEventDispatcherGlib::processEvents (this=0x1333420, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#32 0x00007fd4f915acea in QEventLoop::exec (this=this@entry=0x7fff1b06b6b0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:210
#33 0x00007fd4f91632fc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1261
#34 0x00007fd4f94a5d9c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1639
#35 0x00007fd4f9a487f5 in QApplication::exec () at kernel/qapplication.cpp:2975
#36 0x00007fd4fe7eaf86 in kdemain (argc=1, argv=<optimized out>) at /workspace/build/src/main.cpp:150
#37 0x00007fd4fe3de830 in __libc_start_main (main=0x4006b0 <main(int, char**)>, argc=1, argv=0x7fff1b06b978, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff1b06b968) at ../csu/libc-start.c:291
#38 0x00000000004006e9 in _start ()

Reported using DrKonqi
Comment 1 Elvis Angelaccio 2016-10-19 13:51:53 UTC
Moving to kio, where the crash happens.
Comment 2 Elvis Angelaccio 2016-10-28 09:57:47 UTC
Git commit 722f735396107bc9ad77165f3e9471fdc67b6878 by Elvis Angelaccio.
Committed on 28/10/2016 at 09:43.
Pushed by elvisangelaccio into branch 'master'.

ClipboardUpdater: fix crash on Wayland

QClipboard::mimeData() can return a nullptr on Wayland.

REVIEW: 129222
FIXED-IN: 5.28

M  +2    -1    src/widgets/clipboardupdater.cpp

http://commits.kde.org/kio/722f735396107bc9ad77165f3e9471fdc67b6878
Comment 3 Elvis Angelaccio 2016-11-01 09:36:35 UTC
*** Bug 371925 has been marked as a duplicate of this bug. ***