ClipboardUpdater: fix crash on Wayland

QClipboard::mimeData() can return a nullptr on Wayland.

REVIEW: 129222
BUG: 370520
FIXED-IN: 5.28